[package]
name = "kraken_orchestrator_discovery"
version = "0.1.0"
authors = ["ethanshry <ehshry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kraken-utils = { git = "https://github.com/ethanshry/kraken-utils", branch = "dev" }
tokio = { version= "1.2", features=["full"]}
log = "0.4"
env_logger = "0.8"
dotenv = "0.15.0"